# DocsRAG

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  system_architecture.md
api/: config.py  graph.py  llm.py  main.py  metrics.py  prompts.py  rag.py  retriever.py  schemas.py  tracing.py  translation.py
benchmarks/: bench_backends.py
configs/: agentic.yaml  baseline.yaml  chunk_1024.yaml  chunk_256.yaml  hybrid.yaml  hybrid_rerank.yaml  topk_10.yaml  topk_3.yaml
evaluation/: golden_dataset.json  run_eval.py
indexing/: chunker.py  embeddings.py  fetch_docs.sh  loader.py  qdrant_store.py  run_indexing.py  smoke_test.py
observability/grafana/dashboards/: docsrag.json
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/prometheus/: prometheus.yml
