[project]
name = "docsrag"
version = "0.1.0"
description = "Self-hosted RAG system for technical documentation Q&A"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Barannikov Maxim" }]

dependencies = [
    "fastapi>=0.136.1",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.3.0",
    "langchain-text-splitters>=1.1.2",
    "loguru>=0.7.3",
    "mlflow>=2.18.0",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "qdrant-client>=1.17.1",
    "ragas>=0.2.0",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "mypy>=1.0.0",
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[tool.setuptools.packages.find]
include = ["api*", "indexing*", "evaluation*"]
