[project]
name = "docsrag"
version = "0.1.0"
description = "Self-hosted RAG system for technical documentation Q&A"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Barannikov Maxim" }]

dependencies = [
    "fastapi>=0.136.1",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.3.0",
    "langchain-text-splitters>=1.1.2",
    "loguru>=0.7.3",
    "mlflow>=2.18.0",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "qdrant-client>=1.17.1",
    "langgraph>=0.2.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "rank-bm25>=0.2.2",
    "ragas>=0.2.0",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
    "uvicorn>=0.34.0",
    "langfuse>=4.5.1",
    "langchain-openai>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.12",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[tool.setuptools.packages.find]
include = ["api*", "indexing*", "evaluation*"]
